<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateAccountActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_linear_login">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EdittextBlack"
                android:layout_marginTop="@dimen/margin_bottom_editText"
                android:layout_marginBottom="@dimen/margin_bottom_editText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/createaccount_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/textInputEditText_email"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EdittextBlack"
                android:layout_marginBottom="@dimen/margin_bottom_editText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/createaccount_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/textInputEditText_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EdittextBlack"
                android:layout_marginBottom="@dimen/margin_bottom_editText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/createaccount_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/textInputEditText_username"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EdittextBlack"
                android:layout_marginBottom="@dimen/margin_bottom_editText"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/createaccount_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EdittextBlack"
                    android:hint="@string/TextInputEditText_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EdittextBlack"
                android:layout_marginBottom="@dimen/margin_bottom_editText"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/createaccount_confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/textInputEditText_confirmpassword"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/createaccount_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textButton_createaccount"
                android:layout_marginTop="@dimen/margin_top_button_createAccount"
                android:theme="@style/RaisedButtonNormal"/>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>